infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motoforge-web
  labels:
    app: motoforge-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: motoforge-web
  template:
    metadata:
      labels:
        app: motoforge-web
    spec:
      containers:
        - name: motoforge-web
          image: gcr.io/YOUR_GCP_PROJECT_ID/motoforge-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: motoforge-web
spec:
  selector:
    app: motoforge-web
  ports:
    - port: 3000
      targetPort: 3000
